// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a > query=double-nested-update.graphql 1`] = `
{
  "data": {
    "updateChildById": {
      "child": {
        "dadParent": {
          "id": "WyJQYXJlbnQiLDJd",
          "parentName": "Samuel Alito",
        },
        "id": "WyJDaGlsZCIsMV0=",
        "name": "Johnny Cochran",
      },
    },
  },
}
`;

exports[`a > query=forward-connect-by-id.graphql 1`] = `
{
  "data": {
    "createChild": {
      "child": {
        "dadParent": {
          "id": "WyJQYXJlbnQiLDJd",
          "parentName": "dad",
        },
        "id": "WyJDaGlsZCIsM10=",
        "name": "My baby",
      },
    },
  },
}
`;

exports[`a > query=forward-connect-by-keys.graphql 1`] = `
{
  "data": {
    "createChild": {
      "child": {
        "id": "WyJDaGlsZCIsM10=",
        "momParent": {
          "id": "WyJQYXJlbnQiLDFd",
          "parentName": "mom",
        },
        "name": "My baby",
      },
    },
  },
}
`;

exports[`a > query=forward-create.graphql 1`] = `
{
  "data": {
    "createChild": {
      "child": {
        "dadParent": {
          "id": "WyJQYXJlbnQiLDNd",
          "parentName": "Jimmy Constraint",
        },
        "id": "WyJDaGlsZCIsM10=",
        "momParent": null,
        "name": "Johnny Q. Constraint",
      },
    },
  },
}
`;

exports[`a > query=forward-update-by-id.graphql 1`] = `
{
  "data": {
    "updateChildById": {
      "child": {
        "id": "WyJDaGlsZCIsMV0=",
        "momParent": {
          "id": "WyJQYXJlbnQiLDFd",
          "parentName": "Sally Ride",
        },
        "name": "Jimminy Cricket",
      },
    },
  },
}
`;

exports[`a > query=mixed-multi-level-insert.graphql 1`] = `
{
  "data": {
    "createChild": {
      "child": {
        "dadParent": {
          "childrenByDadParentId": {
            "nodes": [
              {
                "id": "WyJDaGlsZCIsM10=",
                "name": "Sandra Day",
              },
              {
                "id": "WyJDaGlsZCIsNF0=",
                "name": "George Washington",
              },
              {
                "id": "WyJDaGlsZCIsNV0=",
                "name": "Martha Washington",
              },
            ],
            "totalCount": 3,
          },
          "id": "WyJQYXJlbnQiLDNd",
          "parentName": "John Q. Washington",
        },
        "id": "WyJDaGlsZCIsM10=",
        "name": "Sandra Day",
      },
    },
  },
}
`;

exports[`a > query=reverse-connect-by-id.graphql 1`] = `
{
  "data": {
    "createParent": {
      "parent": {
        "childrenByDadParentId": {
          "edges": [
            {
              "node": {
                "id": "WyJDaGlsZCIsMl0=",
                "name": "child 2",
              },
            },
          ],
        },
        "id": "WyJQYXJlbnQiLDNd",
        "parentName": "Daddy-O",
      },
    },
  },
}
`;

exports[`a > query=reverse-connect-by-keys.graphql 1`] = `
{
  "data": {
    "createSchool": {
      "school": {
        "id": "WyJTY2hvb2wiLDRd",
        "name": "My School",
        "teachers": {
          "nodes": [
            {
              "id": "WyJUZWFjaGVyIiwyXQ==",
              "name": "teacher 2",
              "uniqueField": "random unique field 2",
            },
          ],
          "totalCount": 1,
        },
      },
    },
  },
}
`;

exports[`a > query=reverse-create.graphql 1`] = `
{
  "data": {
    "createParent": {
      "parent": {
        "childrenByDadParentId": {
          "nodes": [
            {
              "dadParent": {
                "id": "WyJQYXJlbnQiLDNd",
              },
              "id": "WyJDaGlsZCIsM10=",
              "momParent": null,
              "name": "child 1 of test f1",
            },
          ],
        },
        "childrenByMomParentId": {
          "nodes": [
            {
              "id": "WyJDaGlsZCIsNF0=",
              "momParent": {
                "id": "WyJQYXJlbnQiLDNd",
              },
              "name": "child 2 of test f1",
            },
            {
              "id": "WyJDaGlsZCIsNV0=",
              "momParent": {
                "id": "WyJQYXJlbnQiLDNd",
              },
              "name": "child 3 of test f1",
            },
          ],
        },
        "id": "WyJQYXJlbnQiLDNd",
        "parentName": "test f1",
      },
    },
  },
}
`;

exports[`a > query=reverse-update-by-keys.graphql 1`] = `
{
  "data": {
    "updateSchoolById": {
      "school": {
        "id": "WyJTY2hvb2wiLDJd",
        "name": "Greendale Community College",
        "teachers": {
          "nodes": [
            {
              "id": "WyJUZWFjaGVyIiwxXQ==",
              "name": "Edna Krabappel",
              "uniqueField": "random unique field 1",
            },
            {
              "id": "WyJUZWFjaGVyIiwyXQ==",
              "name": "Seymour Skinner",
              "uniqueField": "random unique field 2",
            },
          ],
          "totalCount": 2,
        },
      },
    },
  },
}
`;

exports[`a > query=reverse-update-by-node.graphql 1`] = `
{
  "data": {
    "updateSchoolById": {
      "school": {
        "id": "WyJTY2hvb2wiLDJd",
        "name": "Greendale Community College",
        "teachers": {
          "nodes": [
            {
              "id": "WyJUZWFjaGVyIiwxXQ==",
              "name": "teacher 1",
              "uniqueField": "56789",
            },
            {
              "id": "WyJUZWFjaGVyIiwyXQ==",
              "name": "teacher 2",
              "uniqueField": "01234",
            },
          ],
          "totalCount": 2,
        },
      },
    },
  },
}
`;

exports[`a > query=triple-nested-connect-by-id.graphql 1`] = `
{
  "data": {
    "createChild": {
      "child": {
        "dadParent": {
          "id": "WyJQYXJlbnQiLDJd",
          "parentName": "dad",
        },
        "id": "WyJDaGlsZCIsM10=",
        "name": "Sonia Sotomayor",
        "studentsByStudentId": {
          "nodes": [
            {
              "id": "WyJTdHVkZW50IiwyLDNd",
              "school": {
                "id": "WyJTY2hvb2wiLDJd",
                "name": "pine",
              },
            },
          ],
          "totalCount": 1,
        },
      },
    },
  },
}
`;

exports[`a > query=triple-nested-create.graphql 1`] = `
{
  "data": {
    "createChild": {
      "child": {
        "id": "WyJDaGlsZCIsM10=",
        "momParent": {
          "childrenByMomParentId": {
            "nodes": [
              {
                "id": "WyJDaGlsZCIsM10=",
                "name": "Hugo Black",
                "studentsByStudentId": {
                  "nodes": [],
                  "totalCount": 0,
                },
              },
              {
                "id": "WyJDaGlsZCIsNF0=",
                "name": "John Roberts",
                "studentsByStudentId": {
                  "nodes": [
                    {
                      "id": "WyJTdHVkZW50IiwyLDRd",
                      "school": {
                        "id": "WyJTY2hvb2wiLDJd",
                      },
                      "schoolId": 2,
                      "studentId": 4,
                    },
                  ],
                  "totalCount": 1,
                },
              },
            ],
            "totalCount": 2,
          },
          "id": "WyJQYXJlbnQiLDNd",
          "parentName": "Sandra Day O'Connor",
        },
        "name": "Hugo Black",
      },
    },
  },
}
`;
